--- a/LR4_CSH/Form1.resx
+++ b/LR4_CSH/Form1.resx
@@ -132,6 +132,12 @@
   <metadata name="Grade.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="Subjects.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Grade.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
@@ -139,7 +145,7 @@
   <data name="panel1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAL8AAAA8CAIAAAC4rPwnAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsEAAA7BAbiRa+0AAAQ+SURBVHhe7ZnpceRACIUdlwNSPIpmkplgvH3QBzSoEWXZ
+        YQUAAAAJcEhZcwAADr4AAA6+AepCscAAAAQ+SURBVHhe7ZnpceRACIUdlwNSPIpmkplgvH3QBzSoEWXZ
         3qr3/RPieOC34ynvxxcAUeAeEAfuAXHgHhAH7gFx4B4QB+4BceAeEAfuAXHgHhAH7gFx4B4QB+4BceAe
         EAfuAXHgHhDnN9zzPj8/Ep/nmwLAyV+7nNc9ryPL7hyvGj1v7kHrF+CeO/zJy3ncU50zS+5eCu2Bz54o
         /91nDwmmD5uJ4qDYHqsdv5v3efz6hZ/Q8PzlMm7lO/eY5kmkVf6oe8LKvpFHNPyIe/zKd+6pco1u0X9d
@@ -161,7 +167,7 @@
 </value>
   </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>50</value>
+    <value>41</value>
   </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
