--- a/LR4_CSH/View/Form1.resx
+++ b/LR4_CSH/View/Form1.resx
@@ -126,6 +126,21 @@
   <metadata name="dataGridViewTextBoxColumn3.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="Id.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn3.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Subjects.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Grade.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="Subjects.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -139,7 +154,7 @@
   <data name="panel1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAL8AAABeCAYAAABy8sUhAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsEAAA7BAbiRa+0AAAhKSURBVHhe7Z1rtiIrDEbPuByQ43E0TsbB2CCvJAQKynrZ
+        YQUAAAAJcEhZcwAADr4AAA6+AepCscAAAAhKSURBVHhe7Z1rtiIrDEbPuByQ43E0TsbB2CCvJAQKynrZ
         +fZa/FApCMmG0nPvqv57A2AUyA/MAvmBWSA/MAvkB2aB/MAskB+YBfIDs0B+YBbID8wC+YFZID8wC+QH
         ZoH8wCyQH5gF8gOzXFf+1+N9+/t7//3d3o9XfA9citfj5urjanR7vH+xRKvkf969lLzdn+nDx5eyvt6P
         Gx0b8l+OfDDFZkP+5/uuCpne1z5bCU7+y2Po5C8ncj7lBeGOsJWsrY12IG4D3n9p5x0d7/N+DflXrntc
